<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="wrap_content"
            android:layout_width="match_parent">

<LinearLayout
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="20dp"
        >
   <Button android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/ROTATION"
           android:id="@+id/rotation"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PHONE"
            android:id="@+id/phone"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SMS"
            android:id="@+id/sms"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DB"
            android:id="@+id/database"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GPS"
            android:id="@+id/gps"/>

</LinearLayout>
</ScrollView>

