<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="10dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/error_color"
                  android:id="@+id/name_validation_error"
                  android:layout_gravity="center"
                  android:visibility="invisible"
                />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                android:text="@string/DB_CREATION"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/db_name_edittext"
                android:hint="@string/DB_NAME"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DB_CREATE"
                android:id="@+id/db_create_button"
                android:onClick="onCreateDatabase"
                style="@style/MgrDefaultButton"/>

        <View android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="10dp"
              android:background="@color/separator" />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/error_color"
                  android:id="@+id/validation_error"
                  android:layout_gravity="center"
                  android:visibility="invisible"
                />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/DB"/>

        <Spinner android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:id="@+id/db_spinner">

        </Spinner>


        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/db_query"
                android:hint="@string/DB_QUERY_HINT"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DB_EXECUTE"
                android:id="@+id/db_execute_button"
                android:onClick="onExecuteQuery"
                style="@style/MgrDefaultButton"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DB_SEND"
                android:id="@+id/db_send_button"
                android:onClick="onSendDatabase"
                style="@style/MgrDefaultButton"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DB_REMOVE"
                android:id="@+id/db_remove_button"
                android:onClick="onRemoveDatabase"
                style="@style/MgrDefaultButton"/>


    </LinearLayout>

</ScrollView>