<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/validation_error"
                  android:layout_gravity="center"
                  android:textColor="@color/error_color"
                  android:visibility="invisible"
                />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PHONE_NUMBER"
                android:layout_margin="10dp"
                android:id="@+id/phone_number"
                android:text="504553848"

                />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SMS_MESSAGE"
                android:layout_margin="10dp"
                android:id="@+id/sms_message"
                />


        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/send"
                android:text="@string/SEND_SMS"
                style="@style/MgrDefaultButton"
                />

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/send_use_intent"
                android:text="@string/SMS_USE_INTENT"
                style="@style/MgrDefaultButton"
                />

    </LinearLayout>

</ScrollView>