<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/validation_error"
              android:layout_gravity="center"
              android:textColor="@color/error_color"
              android:visibility="invisible"
            />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PHONE_NUMBER"
            android:layout_margin="10dp"
            android:id="@+id/phone_number"
            android:text="*124*#"

            />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_call"
            android:text="@string/PHONE_CALL_NOW"
            style="@style/MgrDefaultButton"
            />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_use_intent"
            android:text="@string/PHONE_USE_INTENT"
            style="@style/MgrDefaultButton"
            />

</LinearLayout>